--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,7 +37,10 @@ section#login {
     width: 250px;
     height: 500px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.498);
+    box-shadow: 0px 0px 10px #0000007f;
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
