--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,12 +1,6 @@
 @charset "UTF-8";
 
 
-/*
-    Paleta de cores
-    Laranja: #FA4300
-    Cinsa: #38312F
-*/
-
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
@@ -30,15 +24,15 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px #0000007f;
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -58,22 +52,35 @@ section#login > div#formulario {
 
 div#formulario > h1 {
     text-align: center;
-    margin-bottom: 10px;
 }
 
 div#formulario > p {
     font-size: 0.8em;
+    margin: 10px 0px;
 }
 
-form > div.campo {
-    display: block;
-    width: 100%;
-    height: 40px;
-}
 
 div.campo > label {
     display: none;
 }
+
+div.campo > span {
+    color: #030303;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    font-size: 1em;
+    width: calc(100% - 50px);
+    height: 100%;
+    border-radius: 5px;
+    padding: 4px;
+    transform: translateY(-10px);
+}
+
+
 
 form > input[type=submit] {
     display: block;
@@ -83,7 +90,9 @@ form > input[type=submit] {
     background-color: #A40303;
     color: white;
     border: none;
+    margin-top: 10px;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 form > input[type=submit]:hover {
@@ -96,7 +105,7 @@ form > a.botao {
     font-size: 1em;
     width: 100%;
     height: 40px;
-    padding-top: 7px;
+    padding-top: 5px;
     margin-top: 5px;
     background-color: white;
     color: #500102;
@@ -106,7 +115,8 @@ form > a.botao {
 }
 
 form > a.botao:hover {
-    background-color: #D20628;
+    background-color: #A40303;
+    color: white;
 }
 
 form > a.botao > span {
